<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type ="com.vhenri.cachew.ui.MainViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:isScrollContainer="false"
        android:scrollbars="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="6dp"
        tools:context=".ui.MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_highlight_24" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_text"
            android:gravity="center_horizontal"
            android:layout_marginVertical="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="9dp"
            app:layout_constraintTop_toBottomOf="@+id/info_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/totalAvailableBulbs_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_available_bulbs"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onTextChanged="@{viewModel::onTotalAvailableChanged}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_j"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="9dp"
            app:layout_constraintTop_toBottomOf="@+id/textField_i"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/numBulbColors_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/num_bulb_colors_textInput"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onTextChanged="@{viewModel::onNumBulbColorsChanged}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="9dp"
            app:layout_constraintTop_toBottomOf="@+id/textField_j"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/numEachColor_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/num_each_color_textInput"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onTextChanged="@{viewModel::onNumEachColorChanged}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="9dp"
            app:layout_constraintTop_toBottomOf="@+id/textField_k"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/numBulbsPicked_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/num_bulbs_picked_textInput"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onTextChanged="@{viewModel::onNumBulbsPickedChanged}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="9dp"
            app:layout_constraintTop_toBottomOf="@+id/textField_m"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/numSims_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numSims_textInput"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onTextChanged="@{viewModel::onNumSimChanged}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            app:layout_constraintTop_toBottomOf="@+id/textField_n"
            android:id="@+id/btn_runSim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runSim_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>